plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

// Keep generated Gradle output away from the IDE's locked legacy build tree.
// The property also lets CI or an IDE use an explicitly isolated output
// directory. If the default output already contains files, use a fresh sibling
// for this invocation so a Windows file handle from the previous run cannot
// block compileJava or clean.
def requestedWorldBrowserBuildDir = providers.gradleProperty('worldbrowserBuildDir')
def defaultWorldBrowserBuildDir = layout.projectDirectory.dir('../.worldbrowser-build-runtime')
def worldBrowserBuildDir
if (requestedWorldBrowserBuildDir.isPresent()) {
	worldBrowserBuildDir = layout.projectDirectory.dir(requestedWorldBrowserBuildDir.get())
} else if (defaultWorldBrowserBuildDir.asFile.exists()
		&& defaultWorldBrowserBuildDir.asFile.listFiles()?.length > 0) {
	worldBrowserBuildDir = layout.projectDirectory.dir(
			"../.worldbrowser-build-runtime-${System.currentTimeMillis()}"
	)
} else {
	worldBrowserBuildDir = defaultWorldBrowserBuildDir
}
layout.buildDirectory.set(worldBrowserBuildDir)

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	// fabric-api is required to register mod resources (lang/, textures/)
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
}

processResources {
	def version = project.version
	inputs.property "version", version

	// Ensure UTF-8 encoding so fabric.mod.json is valid across all platforms
	filesMatching("fabric.mod.json") {
		filteringCharset = "UTF-8"
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
	it.options.encoding = 'UTF-8'
}

// VS Code's Java language server can keep Gradle's default classes directory
// open on Windows. Use a dedicated output directory so recompilation and the
// runClient task do not fail while the IDE is indexing the project.
tasks.named('compileJava', JavaCompile).configure {
	destinationDirectory = layout.buildDirectory.dir('worldbrowser-classes/main')
}

sourceSets {
	main {
		output.classesDirs.setFrom(layout.buildDirectory.dir('worldbrowser-classes/main'))
	}
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
